# qasmtrans

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  NOTICE  README.md
data/devices/: .ibm_cairo.json.swp  aspen_m3.json  dummy_ibmq12.json  dummy_ibmq14.json  dummy_ibmq16.json  dummy_ibmq30.json  example_config.json  generate_dummy_topology.py  h1_1.json  h1_2.json  ibm_brisbane.json  ibm_cairo.json  ibm_seattle.json  ibmq_jakarta.json  ibmq_toronto.json  quafu_ScQ-P136.json
data/test_benchmark/: bv10.qasm  hhl_n7.qasm  sat_n11.qasm  square_root_n18_basis.qasm  test.qasm
devicelib/: alt_auckland_n27.json  alt_cairo_n27.json  alt_kawasaki_n127.json  fake_fractional_n5.json  ibm_algiers_n27.json  ibm_brisbane_n127.json  ibm_cusco_n127.json  ibm_geneva_n27.json  ibm_hanoi_n27.json  ibm_kyiv_n127.json  ibm_kyoto_n127.json  ibm_lagos_n7.json  ibm_nairobi_n7.json  ibm_nazca_n127.json  ibm_osaka_n127.json  ibm_oslo_n7.json  ibm_peekskill_n27.json  ibm_perth_n7.json  ibm_prague_n33.json  ibm_quebec_n127.json  ibm_sherbrooke_n127.json  ibm_torino_n133.json  ibm_washington_n127.json  ibmq_16_melbourne_n15.json  ibmq_20_tokyo_n20.json  ibmq_almaden_n20.json  ibmq_armonk_n1.json  ibmq_athens_n5.json  ibmq_belem_n5.json  ibmq_boeblingen_n20.json  ibmq_bogota_n5.json  ibmq_brooklyn_n65.json  ibmq_burlington_n5.json  ibmq_cambridge_n28.json  ibmq_casablanca_n7.json  ibmq_essex_n5.json  ibmq_guadalupe_n16.json  ibmq_jakarta_n7.json  ibmq_johannesburg_n20.json  ibmq_kolkata_n27.json  (+41 more)
dump/: .dump_qasm.hpp.swp  dump_qasm.hpp
gatedef/: README.md  gatedef.md
header/: .chip.hpp.swp  .graph.hpp.swp  chip.hpp  circuit.hpp  gate.hpp  graph.hpp  qasmtrans.hpp  util.hpp
include/: QASMTransPrimitives.hpp  dump_qasm.hpp
include/IR/: chip.hpp  circuit.hpp  gate.hpp  graph.hpp
include/circuit_passes/: README.md  decompose.hpp  remapping.hpp  routing_mapping.hpp  transpiler.hpp
include/parser/: lexer.hpp  parser_util.hpp  qasm_parser.hpp  qasm_parser_expr.hpp
parser/: .parser_util.hpp.swp  .qasm_parser.hpp.swp  parser_util.hpp  qasm_parser.hpp  qasm_parser_expr.hpp
passes/: .decompose.hpp.swp  .routing_mapping.hpp.swp  .transpiler.hpp.swp  README.md  commutative_cancellation.hpp  decompose.hpp  remapping.hpp  routing_mapping.hpp  transpiler.hpp
src/: .qasmtrans.cpp.swp  qasmtrans.cpp
test/: compare_summary.txt  output.qasm  output_summary.txt  run_test.sh  temp_cpp_output.txt  test.py  validation_test.sh
